TravelOffice Zadanie 2, całość

--- a/.gitignore
+++ b/.gitignore
@@ -355,7 +355,4 @@ MigrationBackup/
 
 # End of https://www.gitignore.io/api/visualstudio
 .DS_Store
-Zadania01/TravelOffice/TravelOffice/.DS_Store
-Zadania02/.DS_Store
-Zadania02/Cars/.DS_Store
-*.DS_Store
+.DS_Store?
