--- a/ProjektZaliczeniowy/HotelDrCsharp/HotelDrCsharp.csproj
+++ b/ProjektZaliczeniowy/HotelDrCsharp/HotelDrCsharp.csproj
@@ -9,4 +9,7 @@
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Remove="Setup %28Kopia powodująca konflikty %28użytkownik PanDarek Krzysztofiak%29 2020-01-02%29.cs" />
+  </ItemGroup>
 </Project>
