Podstawowe zalozenia wprowadzone, system dziala

--- a/ProjektZaliczeniowy/HotelDrCsharp/HotelDrCsharp.csproj
+++ b/ProjektZaliczeniowy/HotelDrCsharp/HotelDrCsharp.csproj
@@ -11,5 +11,6 @@
 
   <ItemGroup>
     <Compile Remove="Setup %28Kopia powodująca konflikty %28użytkownik PanDarek Krzysztofiak%29 2020-01-02%29.cs" />
+    <Compile Remove="Date.cs" />
   </ItemGroup>
 </Project>
